--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "styled-components": "^5.3.9",
+    "styled-icons": "^10.47.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
